Attempted brain extraction to help alignment, not successful

--- a/environment.yml
+++ b/environment.yml
@@ -12,3 +12,5 @@ dependencies:
   - pip
   - pip:
     - pyyaml  # For configuration file handling 
+    - antspyx # For brain extraction
+    - antspynet 
